--- a/.gitignore
+++ b/.gitignore
@@ -211,6 +211,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Large Model Files
+model/
+
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
